Se modifico index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Titulo nuevo</h1>
     <form action="#" method="get">
+        <input type="text" name="firts-name" id="name"/>
         <input type="button" value="Enviar"/>
     </form>
 </body>
