--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Titulo nuevo</h1>
     <form action="#" method="get">
         <input type="text" name="firts-name" id="name"/>
+        <input type="text" name="apellido" id="name"/>
         <input type="button" value="Enviar"/>
     </form>
 </body>
