--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form action="#" method="get">
         <input type="text" name="firts-name" id="name"/>
         <input type="text" name="apellido" id="name"/>
+        <input type="text" name="number" id="age"/>
         <input type="button" value="Enviar"/>
     </form>
 </body>
