--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" name="apellido" id="name"/>
         <input type="text" name="number" id="age"/>
         <input type="button" value="Enviar"/>
+        <img src="#" alt="test img"/>
     </form>
 </body>
 </html>
