--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="number" name="firts-name" id="name"/>
         <input type="text" name="apellido" id="name"/>
         <input type="text" name="number" id="age"/>
+        <input type="date" name="birthday" id="birthday"/>
         <input type="button" value="Enviar"/>
     </form>
 </body>
