--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" name="number" id="age"/>
         <input type="date" name="birthday" id="birthday"/>
         <input type="button" value="Enviar"/>
-        <video src="cat.mp4"></video>
+        <video src="video/cat.mp4"></video>
         <img src="#" alt="test img"/>
     </form>
 </body>
